src/test/deca/context/valid/affectation_of_this_to_superclass.deca
/*
    Description : Affectation de this à une variable de la superclasse

    Résultat: OK
*/
class A {}
class B extends A{
    A p = this;
}
