src/test/deca/context/invalid/void_method_with_return.deca
/*
    Description : Retour dans une méthode de type void

    Résultat: Erreur contextuelle (deca:11:8);
*/
class A
{
    int x = 5;

    void t(){
        return x;
    }
}
